\name{NEWS}
\title{News for Package 'Recosystem'}

\section{Changes in Recosystem version 0.2}{
  \itemize{
    \item Linking to Rcpp11.
  }
}

\section{Changes in Recosystem version 0.1}{
  \itemize{
    \item Initial version.
  }
}
 
  